# casproof

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  INTEGRATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
agents/: .dockerignore  Dockerfile  casproof.models.example.json  mcp.example.json  package-lock.json  package.json
agents/src/: agents.test.ts  attest.ts  casper.ts  consumer.ts  demo.ts  deploy.ts  deployVault.ts  doctor.ts  fund.ts  keygen.ts  keygenQuorum.ts  mcp.ts  payVerify.ts  producer.ts  providers.ts  resolve.ts  server.ts  setup.ts  slash.ts  x402.ts
clients/js/: README.md  package-lock.json  package.json
clients/python/: README.md  pyproject.toml
clients/python/casproof/: __init__.py  __main__.py  client.py  hashing.py
clients/python/tests/: test_casproof.py
contract/: Cargo.toml  Makefile  Odra.toml  rust-toolchain.toml
contract/src/: lib.rs
docs/: architecture.html  docker.md  launch-plan.md  openapi.yaml
examples/: curl_verify.sh  langchain_tool.py  mcp.example.json  ollama_models.json  python_verify_before_pay.py
ui/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: AsciiField.tsx  AsciiHero.tsx  AsciiOrb.tsx  AsciiShield.tsx  CasperStack.tsx  FirewallHero.tsx  Footer.tsx  Header.tsx  Hero.tsx  HeroVerify.tsx  HowItWorks.tsx  Integration.tsx  IntegrationShowcase.tsx  PoisonDemo.tsx  ProblemFlow.tsx  QuorumContrast.tsx  Reveal.tsx  Roadmap.tsx  ui.tsx  (+4 more)
(+11 files in other folders)
