[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "casproof"
version = "1.0.0"
description = "Verify-before-act for AI agent outputs on Casper — Python client + CLI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = []

[project.scripts]
casproof = "casproof.__main__:main"

[tool.setuptools.packages.find]
include = ["casproof*"]
